[package]
name = "random_bru_bot"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"

[dependencies]
argh = "0.1"
chrono = "0.4"
cron = "0.8"
dirs = "3.0"
log = "0.4"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
regex = "1.4"
ron = "0.6"
serde = "1.0"
tokio = { version = "1.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.2"
url = "2.2"
